--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,6 +59,7 @@
         "no-empty":                     1,
         "no-case-declarations":         0,
         "max-len":                      0,
+        "babel/semi":                   1,
         "react/prefer-es6-class":       1,
         "react/react-in-jsx-scope":     1,
         "react/prop-types":             1,
