--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0"
-  },  
-  "devDependencies": {
+    "webpack": "3.1.0",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
