--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -45,14 +46,14 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "eslint": "^4.17.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-class-property": "^1.1.0",
     "eslint-plugin-jest": "^21.9.0",
     "eslint-plugin-react": "^7.6.1",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "live-server": "^1.2.0",
     "react-test-renderer": "16.0.0",
