--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "expensify-app",
   "version": "1.0.0",
   "main": "index.js",
+  "license": "MIT",
   "engines": {
     "node": "8.9.4"
   },
