--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,22 @@
 {
-    "presets": [
-        "env",
-        "stage-1",
-        "react"
-    ],
-    "plugins": [ 
-        "transform-class-properties",
-        "transform-object-rest-spread"
-    ]
+  "env": {
+    "test": {
+      "presets": ["env", "react", "stage-2"],
+      "plugins": ["transform-export-extensions"],
+      "only": [
+        "./**/*.js",
+        "node_modules/jest-runtime"
+      ]
+    }
+  },
+  "presets": [
+      "env",
+      "stage-1",
+      "react"
+  ],
+  "plugins": [ 
+      "transform-class-properties",
+      "transform-object-rest-spread"
+  ],
+  "auxiliaryCommentBefore": "istanbul ignore next"
 }
