--- a/jest.config.json
+++ b/jest.config.json
@@ -5,5 +5,6 @@
   "setupFiles": [
     "raf/polyfill",
     "<rootDir>/src/tests/setupTests.js"
-  ]
+  ],
+  "coverageDirectory": "<rootDir>/src/tests/coverage"
 }
