--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --config=jest.config.json --coverage --no-cache",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^.+\\.(css|scss)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.js?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "!node_modules/react-runtime"
+    ]
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -51,17 +63,18 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "cross-env": "5.0.5",
-    "dotenv": "4.0.0",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
+    "babel-jest": "^22.4.1",
+    "cross-env": "^5.1.3",
+    "dotenv": "^5.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
     "eslint": "^4.17.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-class-property": "^1.1.0",
     "eslint-plugin-jest": "^21.9.0",
     "eslint-plugin-react": "^7.6.1",
-    "jest": "20.0.4",
+    "jest": "^22.4.2",
     "live-server": "^1.2.0",
     "react-test-renderer": "16.0.0",
     "redux-mock-store": "1.2.3",
